# SciNanoAI

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CITATION.cff  README.md  docker-compose.dev.yml  docker-compose.yml  download_data.py  download_db.py  env-example  pyproject.toml  requirements.txt  run.py  train_cellpose.py  upload_data.py
.github/workflows/: ci.yml
app/: run.py
chatbot_app/: Dockerfile  __init__.py  app.py  chatbot.py  conductor_agent.py  config.py  decomposer_agent.py  local_agents.py  main.py  models.py  requirements.txt
chatbot_app/core/: history.py  prompts.py
chatbot_app/llm/: base.py  factory.py  gigachat_client.py  ollama_client.py  openai_client.py  yandex_client.py
chatbot_app/services/: analysis.py  chatbot_service.py  decomposer.py  vector_client.py
configs/training/: cellpose_default.yaml
docker/: chatbot.Dockerfile  vector.Dockerfile
docs/: architecture.md
docs/adr/: 0001-llm-provider-abstraction.md  0002-consolidate-llm-gateway.md  0002-vector-index-versioning.md
notebooks/: 10_val.csv  30_val.csv  REW_calculate_metrics.ipynb  calculate_metrics.ipynb  calculate_metrics_30_val.ipynb  create_vector_db.ipynb  firs_impl.ipynb  infer_2.ipynb  inference.ipynb  inference_select_models.ipynb  new_wal.csv  openai_new_save.csv  parse_papers.ipynb  select_llm.ipynb
scripts/: train_cellpose.py
src/data/: __init__.py  create_bd.py
src/evalute/: eval_celpose.py  new_celpose.py
src/scinanoai/: __init__.py
src/scinanoai/chatbot/: __init__.py  api.py  factory.py  schemas.py  service.py  settings.py  ui.py  ui_api.py  ui_i18n.py  ui_theme.py
src/scinanoai/chatbot/core/: __init__.py  history.py  prompts.py  router.py
src/scinanoai/chatbot/llm/: __init__.py  base.py  factory.py  gigachat_client.py  ollama_client.py  openai_client.py  yandex_client.py
src/scinanoai/chatbot/services/: __init__.py  decomposer.py  formality.py  image_analysis.py  references.py  vector_client.py
src/scinanoai/data/: masks_to_coco.py
src/scinanoai/storage/: __init__.py  cli.py  s3.py
src/scinanoai/training/: __init__.py
src/scinanoai/training/cellpose/: __init__.py  cli.py  config.py  data.py  trainer.py
src/scinanoai/training/yolo/: __init__.py  train.py
src/scinanoai/utils/: logging.py  paths.py
src/scinanoai/vector_service/: __init__.py  api.py  repository.py  schemas.py  settings.py
src/scinanoai/vector_service/ingest/: __init__.py  excel.py  pdf.py
src/train/: cellpose_trainer.py  config.py  metrics.py  optim_rag.py  optim_rag_nikita.py  train_cellpose.py  train_yolo_XL.py
src/utils/: config.py  convert_npy_coco_old.py  paths copy.py  paths.py  reduce_segmentation.py  renaming_img.py  s3.py
tests/: conftest.py
tests/unit/: test_history.py  test_metrics.py  test_references.py  test_router.py  test_schemas.py  test_ui_api.py  test_ui_i18n.py
vector_service/: ingest_excel_to_db.py  main.py  models.py  requirements.txt  vector_db.py
