[project]
name = "scinanoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.4",
    "faiss-cpu>=1.13.1",
    "fastapi>=0.124.0",
    "gradio>=6.0.2",
    "ipykernel>=7.1.0",
    "langchain>=1.1.2",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.1.0",
    "numpy>=2.3.5",
    "openai>=2.9.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "sentence-transformers>=5.1.2",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
