[project]
name = "scinanoai"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3>=1.42.9",
    "cellpose>=4.0.8",
    "dotenv>=0.9.9",
    "faiss-cpu>=1.13.1",
    "gradio>=6.1.0",
    "langchain-community>=0.4.1",
    "langchain-huggingface>=1.2.0",
    "matplotlib>=3.10.8",
    "numpy>=2.3.5",
    "openai>=2.11.0",
    "pandas>=2.3.3",
    "requests>=2.32.5",
    "seaborn>=0.13.2",
    "sentence-transformers>=5.2.0",
    "tiktoken>=0.12.0",
    "transformers>=4.57.3",
    "uvicorn>=0.38.0",
]
