[build-system]
requires = ["hatchling>=1.27"]
build-backend = "hatchling.build"

[project]
name = "scinanoai"
version = "0.2.0"
description = "Scientific RAG chatbot and image-analysis pipeline for nano-structure research"
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.11,<3.13"
authors = [{ name = "VinaVolo" }]
keywords = ["rag", "chatbot", "cellpose", "nanostructure", "faiss"]
classifiers = [
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
]

# Shared runtime deps used by every entrypoint
dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.7",
    "python-dotenv>=1.0",
    "tenacity>=9.0",
]

[project.optional-dependencies]
# --- Chatbot service (FastAPI + Gradio UI + LLM clients)
chatbot = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "gradio>=5.9",
    "httpx>=0.28",
    "openai>=1.56",
    "tiktoken>=0.8",
    "langchain-community>=0.3.9,<0.4",
    "langchain-core>=0.3.21,<0.4",
    "pandas>=2.2",
    "Pillow>=11.0",
    "numpy>=1.26,<2",
    "transformers>=4.46",
    "torch>=2.5",
]

# --- Vector service (FAISS retrieval microservice)
vector = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "faiss-cpu>=1.9",
    "sentence-transformers>=3.3",
    "langchain-huggingface>=0.1.2,<0.2",
    "langchain-community>=0.3.9,<0.4",
    "numpy>=1.26,<2",
    "torch>=2.5",
]

# --- ML training & evaluation (cellpose / yolo / image utilities)
ml = [
    "cellpose>=4.0",
    "torch>=2.5",
    "numpy>=1.26,<2",
    "scikit-image>=0.25",
    "scikit-learn>=1.5",
    "scipy>=1.14",
    "matplotlib>=3.10",
    "seaborn>=0.13",
    "pandas>=2.2",
    "Pillow>=11.0",
    "tqdm>=4.67",
]

# --- Data pipelines: S3, PDF ingestion, Excel
data = [
    "boto3>=1.35",
    "openpyxl>=3.1",
    "unstructured>=0.16",
    "tenacity>=9.0",
]

# --- Developer tooling
dev = [
    "pytest>=8.3",
    "pytest-cov>=6.0",
    "pytest-asyncio>=0.24",
    "ruff>=0.8.4",
    "mypy>=1.13",
    "pre-commit>=4.0",
    "types-requests",
    "httpx>=0.28",
]

[project.scripts]
scinanoai-train-cellpose = "scinanoai.training.cellpose.cli:main"
scinanoai-ingest-excel = "scinanoai.vector_service.ingest.excel:main"
scinanoai-ingest-pdf = "scinanoai.vector_service.ingest.pdf:main"
scinanoai-s3 = "scinanoai.storage.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["src/scinanoai"]

# -----------------------------------------------------------------------------
# Tooling
# -----------------------------------------------------------------------------

[tool.ruff]
line-length = 100
target-version = "py311"
src = ["src", "tests"]
exclude = ["notebooks", ".venv", "data", "db", "models"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "B", "UP", "SIM", "PL", "RUF", "TID"]
ignore = [
    "PLR0913",  # too many arguments (DI constructors legitimately have many)
    "PLR0911",  # too many return statements (early-return routers)
    "PLR2004",  # magic numbers (tuning constants)
    "PLC0415",  # imports inside functions (lazy ML imports are intentional)
    "E501",     # line length — handled by formatter
    "B008",     # function call in default (FastAPI Depends)
    "UP045",    # PEP 604 unions in older 3.10 syntax (we target 3.11+)
    "RUF002",   # ambiguous Cyrillic — prompt strings are Russian on purpose
    "RUF003",
    "TID252",   # relative parent imports within the package are fine
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["PLR2004", "S101", "PLC0415"]
"src/scinanoai/training/cellpose/trainer.py" = ["PL", "B", "RUF", "SIM", "UP"]  # legacy
"src/scinanoai/training/cellpose/metrics.py" = ["PL", "UP", "B"]
"src/scinanoai/chatbot/core/router.py" = ["UP042"]
"src/scinanoai/chatbot/services/decomposer.py" = ["SIM103"]

[tool.mypy]
python_version = "3.11"
strict = false
disallow_untyped_defs = true
warn_unused_ignores = true
warn_return_any = true
ignore_missing_imports = true
files = ["src/scinanoai"]

[tool.pytest.ini_options]
minversion = "8.0"
testpaths = ["tests"]
addopts = "-ra --strict-markers --cov=scinanoai --cov-report=term-missing"
markers = [
    "unit: fast, isolated unit tests",
    "integration: hits external services (FAISS, HTTP, etc.)",
]

[tool.coverage.run]
branch = true
source = ["src/scinanoai"]

[tool.coverage.report]
exclude_also = [
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
]
